--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="button" value="saludar">
+    <button>Saludar</button>
 </body>
 </html>
