--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="eventos.js"></script>
+    <style>
+        #contenedor-boton{
+            padding: 5px;
+            background-color: green;
+        }
+
+    </style>
 </head>
 <body>
-    <button>Saludar</button>
+    <div id="contenedor-boton">
+    <button onclick="alert('Hola!')">Saludar</button>
+    </div>
+  
 </body>
 </html>
