--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="contenedor-boton">
-    <button onclick="alert('Hola!')">Saludar</button>
+    <button>Saludar</button>
     </div>
   
 </body>
